# data-sanity

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--Tool-4-data-sanity-A-tiny-dataset-health-anomaly-check_1767934547645.txt
datasanity/: LICENSE  demo.csv  pyproject.toml  report.py  run_demo.py
datasanity/datasanity/: __init__.py  core.py
tests/: test_core.py
