[project]
name = "datasanity"
version = "0.1.0"
description = "A tiny (<200 loc) CSV health + anomaly detector"
authors = [{ name="RJ Sabouhi" }]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = ["pandas", "numpy"]

[project.urls]
Homepage = "https://github.com/rjsabouhi/datasanity"
Repository = "https://github.com/rjsabouhi/datasanity"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
